--- a/core/static/css/_variables.scss
+++ b/core/static/css/_variables.scss
@@ -57,6 +57,7 @@ $header-link-hover-color: #000 !default;
 $heading-color: #000 !default;
 $subheading-color: #999999 !default;
 $article-list-link-color: #000!default;
+$article-list-link-hover-color: $site-primary-color !default;
 
 $caption-color: #929191 !default;
 $primary-topic-color: #fff !default;
@@ -69,7 +70,6 @@ $button-bg-hover-color: $black !default;
 
 //article elements
 $topic-link-color: $site-primary-color !default;
-
 
 $blurb-author-link-color: $text-color !default;
 $blurb-link-hover-color: $site-primary-color !default;
